Add configuration option to show custom logo